--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "taher-kathiriya/craft-picture-tag",
-  "description": "Handle your picture and image tag with webp support on craft 5 with that render svg as image or code.",
+  "name": "sfs/craft-picture-tag",
+  "description": "Handle your picture and image tag with webp support on Craft 5 with SVG rendering.",
   "type": "craft-plugin",
   "license": "mit",
   "version": "1.0.1",
@@ -20,14 +20,14 @@
   },
   "autoload": {
     "psr-4": {
-      "taherkathiriya\\craftpicturetag\\": "src/"
+      "SFS\\craftpicturetag\\": "src/"
     }
   },
   "extra": {
     "handle": "picture-tag",
     "name": "Picture Tag",
-    "developer": "Taher kathiriya",
-    "class": "taherkathiriya\\craftpicturetag\\PictureTag",
+    "developer": "SFS Infotech",
+    "class": "SFS\\craftpicturetag\\PictureTag",
     "documentationUrl": "https://github.com/taher-k5/picture-tag.git",
     "changelogUrl": "https://github.com/taher-k5/picture-tag/releases"
   },
